Changes with APR b1

  *) Add an APR_GET_POOL macro to get a pool from any APR type that has
     a pool.  This requires that ALL apr types put the pool as the first
     field in their structure. [Ryan Bloom]

  *) Begin to remove the ability to allocate out of NULL pools.  The first
     problem to solve, is that we need an apr_lock in order to allocate
     pools, so that we can lock things out when allocating.  So, how do we
     allocate locks without a pool to allocate from?  The answer is to create
     a global_apr_pool, which is a bootstrapping pool.  There should NEVER
     be a sub-pool off this pool, and it is static to an APR file.  This is
     only used to allow us to allocate the locks cleanly, without using the
     NULL pool hack.  [Ryan Bloom]

  *) Fix a logic error in the poll code when implemented using select.
     [Nick Caruso <ncaruso@gamesville.com>]

  *) FreeBSD does not support sendfile() in combination with threads
     before version 4.2.  We no longer even try to support it.
     [Ryan Bloom]

  *) On FreeBSD, it is possible for the first call to sendfile to
     get EAGAIN, but still send some data.  This means that we cannot
     call sendfile and then check for EAGAIN, and then wait and call
     sendfile again.  If we do that, then we are likely to send the
     first chunk of data twice, once in the first call and once in the
     second.  If we are using a timed write, then we check to make sure
     we can send data before trying to send it. [Ryan Bloom]

  *) Cleanup to help Apache support programs build cleanly.
     [Cliff Woolley <cliffwoolley@yahoo.com>]

  *) Cleanup some compiler warnings on Solaris
     [Dale Ghent <daleg@elemental.org>]

  *) apr_getaddrinfo() can now return multiple addresses for a host
     via the next field in apr_sockaddr_t.  [Jeff Trawick]

  *) Tighten up the check for getaddrinfo().  If it can't figure out
     the appropriate address family for 127.0.0.1, it fails.  